Logo + Nom du site enfin affichés. Quelques correction pour le format mobile : flex-wrap.

--- a/src/app/styles/components.css
+++ b/src/app/styles/components.css
@@ -36,7 +36,7 @@
 }
 
 @keyframes iconsMove {
-  0% { transform: translateX(-8.75rem); } /* 6.25rem * 1.5 */
+  0%  { transform: translateX(-8.75rem); } /* 6.25rem * 1.5 */
   15% { transform: translateX(-7.0rem); } /* 5rem * 1.5 */
   20% { transform: translateX(-7.0rem); } /* 5rem * 1.5 */
   35% { transform: translateX(-5.2rem); } /* 3.7rem * 1.5 */
@@ -45,5 +45,35 @@
   60% { transform: translateX(-3.45rem); } /* 2.5rem * 1.5 */
   75% { transform: translateX(-1.8rem); } /* 1.2rem * 1.5 */
   80% { transform: translateX(-1.8rem); } /* 1.2rem * 1.5 */
-  to { transform: translateX(0rem); }
+  to  { transform: translateX(0rem); }
+}
+
+/***** Header ********************************************************************************************/
+
+.title{
+  color: blueviolet;
+  font-weight: 700;
+  font-size: 15px;
+  text-transform: uppercase;
+  text-shadow: 0px 0px 4px rgb(133, 66, 66);
+  display: flex;
+  align-items: center;
+}
+
+@media (max-width: 1280px) {
+  .title{
+    color: white;
+    font-size: 10px;
+    position: absolute;
+    background-color: rgba(137, 43, 226, 0.711);
+    padding: 0.2rem 0.5rem;
+    top: 55%;
+    border-radius: 10px;
+  }
+}
+
+.borderTitle{
+  border: 2px solid blueviolet;
+  box-shadow: 0 0 12px blueviolet;
+  background: rgba(0, 0, 0, 0.445);
 }
